# cronirs

./: .gitignore  .justfile  Cargo.toml  Dockerfile  Dockerfile.multiplatform  LICENSE  README.md  build.sh  docker-bake.hcl  entrypoint.sh  init_buildx.sh  platform.sh  run.sh  sample.env
src/: error.rs  main.rs
