[package]
name = "cronirs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
tokio-cron-scheduler = "0.5"

# log
log = "0.4"
simplelog = "0.11"
