[package]
name = "cronirs"
version = "0.2.0"
edition = "2021"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
homepage = "https://atareao.es"
readme = "README.md"
description = "A simple, lightweight cron"
repository = "https://github.com/atareao/cronirs"
license = "MIT"
license-file = "LICENSE"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-cron-scheduler = "0.9"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
